# ai-agent-tools

./: .gitignore  README.md
agents/: README.md  ocrAgent.py  pyproject.toml  try.py
agents/ocrAgent/: ocrAgent.json  ocrAgent.py
agents/utils/: run_agent_query.py
gateway/: README.md  main.py  pyproject.toml
shared/: README.md  a2a_wrapper.py
tools/ocr_tool/: Dockerfile  README.md  main.py  pyproject.toml  test.py  tool_spec.json
tools/ocr_tool_mcp/: README.md  mcp_server.py  pyproject.toml
tools/outlook_mcp/: main.py  pyproject.toml
